samples/_failures_safe/1761611428_37e646_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_904f2b96.c: In function ‘main’:
./samples/SAFE/__tmp_904f2b96.c:138:5: error: expected declaration or statement at end of input
  138 |     printf("===========\n");
      |     ^~~~~~
